@@ -17,49 +17,40 @@ License for more details.
 int test_from_decimal_to_decimal_round_trip(int verbose,
 					    const char *expected_str)
 {
-	int err, failures;
+	int err, failures, is_negative;
 	unsigned char bytes_buf[20];
 	char as_string[BUFLEN];
-
 	struct ehbigint a_bigint;
-
 	a_bigint.bytes = bytes_buf;
 	a_bigint.bytes_len = 20;
-
 	VERBOSE_ANNOUNCE(verbose);
 	failures = 0;
-
+	is_negative = expected_str[0] == '-';
 	err =
 	    ehbi_set_decimal_string(&a_bigint, expected_str,
 				    strlen(expected_str));
-
 	if (err) {
 		Test_log_error1("error %d ehbi_set_decimal_string\n", err);
 		Test_log_error("Aborting test\n");
 		return (1 + failures);
 	}
-
-	if (ehbi_is_negative(&a_bigint, &err) || err) {
-		Test_log_error2("ehbi_is_negative for %s, (error:%d)\n",
-				expected_str, err);
+	if (ehbi_is_negative(&a_bigint, &err) != is_negative || err) {
+		Test_log_error3("ehbi_is_negative != %d for %s, (error:%d)\n",
+				is_negative, expected_str, err);
 		failures += 1;
 	}
-
 	err = ehbi_to_decimal_string(&a_bigint, as_string, BUFLEN);
 	if (err) {
 		Test_log_error1("error %d ehbi_to_decimal_string\n", err);
 		Test_log_error("Aborting test\n");
 		return (1 + failures);
 	}
-
 	failures += check_str(as_string, expected_str);
-
 	if (failures) {
 		Test_log_error1("%d failures in "
 				"check_decimal_to_decimal_round_trip\n",
 				failures);
 	}
-
 	return failures;
 }
 
@@ -76,6 +67,9 @@ int main(int argc, char **argv)
 	failures += test_from_decimal_to_decimal_round_trip(v, str_val);
 
 	str_val = "200";
+	failures += test_from_decimal_to_decimal_round_trip(v, str_val);
+
+	str_val = "-1";
 	failures += test_from_decimal_to_decimal_round_trip(v, str_val);
 
 	if (failures) {
